--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MyPlaces</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Map Listings</string>
     <string name="title_activity_maps">Map</string>
     <string name="map_title">Map</string>
 </resources>
